fix gap

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -65,7 +65,7 @@ section {
   display: -webkit-flex;
   display: flex;
   align-items: center;
-  gap: 30px;
+  //gap: 30px;
 
   @include transition(all, 0.3s);
 
@@ -76,8 +76,14 @@ section {
     display: -webkit-flex;
     display: flex;
     align-items: center;
-    gap: 30px;
+    //gap: 30px;
     max-width: 1680px;
+    > * {
+      margin-right: 30px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 
   .logo {
@@ -460,7 +466,7 @@ section {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    gap: 50px;
+    //gap: 50px;
     > div {
       width: 100%;
       padding: 30px 180px 30px 30px;
@@ -469,6 +475,10 @@ section {
       position: relative;
       min-height: 297px;
       overflow: hidden;
+      margin-right: 50px;
+      &:last-child {
+        margin-right: 0;
+      }
       &.elementary {
         background: #c6c7cc url("../images/elementary-bg.png") no-repeat center center;
         background-size: cover;
@@ -764,7 +774,13 @@ section {
     display: -webkit-flex;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    //gap: 20px;
+    > * {
+      margin-right: 20px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
     .tutor {
       padding: 5px 5px 20px;
       width: 190px;
@@ -896,7 +912,7 @@ section {
         margin-bottom: 10px;
       }
     }
-    .course {
+    .class {
       padding: 0 0 20px;
       width: 298px;
       height: 515px;
@@ -1185,7 +1201,7 @@ section {
           display: -webkit-flex;
           display: flex;
           padding: 90px 80px;
-          gap: 50px;
+          //gap: 50px;
           align-items: center;
           justify-content: center;
           position: relative;
@@ -1215,6 +1231,7 @@ section {
             height: 160px;
             @include borderRadius(100%);
             overflow: hidden;
+            margin-right: 50px;
 
             img {
               width: 100%;
@@ -1237,6 +1254,10 @@ section {
           }
           @media screen and (max-width: $md) {
             flex-direction: column;
+            .thumb {
+              margin-right: 0px;
+              margin-bottom: 30px;
+            }
 
             .words {
               display: -webkit-box;
@@ -1271,9 +1292,15 @@ section {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    gap: 30px;
+    //gap: 30px;
     justify-content: center;
+
     > div {
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:last-child {
+        margin-right: 0;
+      }
       width: 400px;
       min-height: 400px;
       background: #fff;
@@ -1331,6 +1358,7 @@ section {
       //flex-wrap: wrap;
       > div {
         width: 100%;
+        margin-right: 0;
         min-width: none;
       }
     }
@@ -1353,7 +1381,7 @@ section {
           height: auto;
           margin-bottom: 30px;
         }
-        .course {
+        .class {
           height: auto;
           padding-bottom: 60px;
           width: 100%;
